# shippy

./: Cargo.toml
assets/: package-lock.json
assets/src/: Shared.elm
assets/src/Pages/: Top.elm
src/: graphql.rs  main.rs  model.rs  prelude.rs  result.rs
src/domain/: mod.rs
src/domain/entities/: app.rs  id.rs  kind.rs  mod.rs  service.rs
src/domain/repo/: app.rs  mod.rs  service.rs
src/domain/use_cases/app/: create.rs  list.rs  mod.rs
src/infra/: mod.rs
src/infra/cli/: mod.rs
src/infra/memory/: mod.rs
src/infra/server/: mod.rs
src/infra/term/: mod.rs
src/scratch/: graphql.rs
