[package]
name = "shippy"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = { git = "https://github.com/softprops/shiplift"}
tokio = {version = "1.2.0", features = ["full"]}
warp = "0.3.0"
futures = "0.3.12"
