[package]
name = "shippy"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = { git = "https://github.com/softprops/shiplift", features= ["chrono"]}
tokio = {version = "1.2.0", features = ["full"]}
warp = "0.3.0"
futures = "0.3.12"
xtra = {version = "0.5.0-rc.1", features = ["timing", "with-tokio-1"]}
spaad = "0.3.2"
async-trait = "0.1.42"
async-graphql = "2.5.2"
async-graphql-warp = "2.5.2"
lazy_static = "1.4.0"
dashmap = "4.0.2"
derive_builder = "0.9.0"
thiserror = "1.0.23"
chrono = "0.4.19"
custom_derive = "0.1.7"
newtype_derive = "0.1.6"
anyhow = "1.0.38"
uuid = { version = "0.8.2", features = ["v4"]}
